--- a/mysite/static/style.css
+++ b/mysite/static/style.css
@@ -16,7 +16,7 @@ html, body {
 	margin: 0;
 }
 body {
-	background: #fff;
+	background: #ffffff;
 	font-family: Inter, "Helvetica Neue", "Segoe UI", sans-serif;
 	font-size: 15px;
 	line-height: 23px;
